--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<modules>
 		<module>event</module>
 		<module>ticket</module>
+		<module>eureka-server</module>
 	</modules>
 
 	<name>microservices</name>
@@ -23,6 +24,7 @@
 		<maven.compiler.target>17</maven.compiler.target>
 		<spring.boot.maven.plugin.version>3.0.6</spring.boot.maven.plugin.version>
 		<spring.boot.dependecies.version>3.0.6</spring.boot.dependecies.version>
+		<spring.cloud-version>2022.0.4</spring.cloud-version>
 	</properties>
 
 	<dependencyManagement>
@@ -33,6 +35,13 @@
 				<version>${spring.boot.dependecies.version}</version>
 				<scope>import</scope>
 				<type>pom</type>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring.cloud-version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
