--- a/event/src/main/resources/application.yml
+++ b/event/src/main/resources/application.yml
@@ -16,3 +16,9 @@ spring:
                 format_sql: true
         show-sql: false
         open-in-view: false
+eureka:
+    client:
+        service-url:
+            defaultZone: http://localhost:8761/eureka
+        fetch-registry: true
+        register-with-eureka: true
