[General] Adding new module "Sms Notification"

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<module>ticket</module>
 		<module>eureka-server</module>
         <module>seat</module>
+        <module>sms-notification</module>
     </modules>
 
 	<name>microservices</name>
