--- a/event/src/main/resources/application.yml
+++ b/event/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
     application:
         name: event
     datasource:
-        password: password
-        url: jdbc:postgresql://localhost:5432/event
-        username: szymonj
+        password: ${DB_PASSWORD_EVENT}
+        url: ${DB_URL_EVENT}
+        username: ${DB_USERNAME_EVENT}
     jpa:
         hibernate:
             ddl-auto: create-drop
@@ -19,6 +19,6 @@ spring:
 eureka:
     client:
         service-url:
-            defaultZone: http://localhost:8761/eureka
+            defaultZone: ${EUREKA_SERVER}
         fetch-registry: true
         register-with-eureka: true
