--- a/ticket/src/main/resources/application.yml
+++ b/ticket/src/main/resources/application.yml
@@ -16,6 +16,8 @@ spring:
                 format_sql: true
         show-sql: false
         open-in-view: false
+    kafka:
+        bootstrap-servers: localhost:9092
 eureka:
     client:
         service-url:
