[Sms Notification Microservice] Adding mechanism to consume notification with kafka

--- a/sms-notification/src/main/resources/application.yml
+++ b/sms-notification/src/main/resources/application.yml
@@ -16,6 +16,9 @@ spring:
                 format_sql: true
         show-sql: false
         open-in-view: false
+    kafka:
+        bootstrap-servers: localhost:9092
+        consumer.value-deserializer: com.eve.ticketing.app.smsnotification.kafka.KafkaNotificationDeserializer
 eureka:
     client:
         service-url:
