--- a/cloud-gateway/src/main/resources/application.yml
+++ b/cloud-gateway/src/main/resources/application.yml
@@ -35,6 +35,12 @@ spring:
                     uri: lb://AUTH-USER
                     predicates:
                         - Path=/api/v1/auth-user/**
+            globalcors:
+                corsConfigurations:
+                    '[/**]':
+                        allowedOrigins: "*"
+                        allowedMethods: "*"
+                        allowedHeaders: "*"
 server:
     port: 8080
 eureka:
