--- a/cloud-gateway/src/main/resources/application.yml
+++ b/cloud-gateway/src/main/resources/application.yml
@@ -35,6 +35,12 @@ spring:
                     uri: lb://AUTH-USER
                     predicates:
                         - Path=/api/v1/auth-user/**
+
+                -   id: firebase
+                    uri: lb://FIREBASE
+                    predicates:
+                        - Path=/api/v1/firebase/**
+                    filters: AuthenticationFilter
             globalcors:
                 corsConfigurations:
                     '[/**]':
