[AuthUser Microservice] Updating AuthUser endpoint, which returns value of the field from particular entity and updating Seat application.yml

--- a/seat/src/main/resources/application.yml
+++ b/seat/src/main/resources/application.yml
@@ -20,5 +20,5 @@ eureka:
     client:
         service-url:
             defaultZone: ${EUREKA_SERVER}
-        fetch-registry: true
-        register-with-eureka: true
+        fetch-registry: false
+        register-with-eureka: false
