--- a/seat/src/main/resources/application.yml
+++ b/seat/src/main/resources/application.yml
@@ -19,6 +19,6 @@ spring:
 eureka:
     client:
         service-url:
-            defaultZone: ${EUREKA_SERVER}
-        fetch-registry: false
-        register-with-eureka: false
+            defaultZone: http://localhost:8761/eureka
+        fetch-registry: true
+        register-with-eureka: true
